tests/baselines/reference/collisionExportsRequireAndAmbientModule.errors.txt
collisionExportsRequireAndAmbientModule_externalmodule.ts(8,5): error TS2322: Type 'null' is not assignable to type 'I'.
collisionExportsRequireAndAmbientModule_externalmodule.ts(17,5): error TS2322: Type 'null' is not assignable to type 'I'.


==== collisionExportsRequireAndAmbientModule_externalmodule.ts (2 errors) ====
    export declare namespace require {
        export interface I {
        }
        export class C {
        }
    }
    export function foo(): require.I {
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'I'.
    }
    export declare namespace exports {
        export interface I {
        }
        export class C {
        }
    }
    export function foo2(): exports.I {
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'I'.
    }
    declare namespace m1 {
        namespace require {
            export interface I {
            }
            export class C {
            }
        }
        namespace exports {
            export interface I {
            }
            export class C {
            }
        }
    }
    namespace m2 {
        export declare namespace require {
            export interface I {
            }
            export class C {
            }
        }
        export declare namespace exports {
            export interface I {
            }
            export class C {
            }
        }
        var a = 10;
    }
    
==== collisionExportsRequireAndAmbientModule_globalFile.ts (0 errors) ====
    declare namespace require {
        export interface I {
        }
        export class C {
        }
    }
    declare namespace exports {
        export interface I {
        }
        export class C {
        }
    }
    declare namespace m3 {
        namespace require {
            export interface I {
            }
            export class C {
            }
        }
        namespace exports {
            export interface I {
            }
            export class C {
            }
        }
    }
    namespace m4 {
        export declare namespace require {
            export interface I {
            }
            export class C {
            }
        }
        export declare namespace exports {
            export interface I {
            }
            export class C {
            }
        }
    
        var a = 10;
    }
    